# NCS_Reservation_Service

./: Cargo.toml  build.rs
migrations/: 20250131062510_create_reservation_tables.sql
proto/: auth.proto  reservation.proto  reservationfcm.proto
src/: db_connection.rs  grpc_client.rs  grpc_server.rs  lib.rs  main.rs  settings.rs  startup.rs  state.rs
src/adapter/: mod.rs  reservation_adapter.rs
src/adapter/in_web/: mod.rs  reservation_controller.rs  routes.rs
src/application/: mod.rs  reservation_service.rs
src/application/port/in/: mod.rs  reservation_usecase.rs
src/common/: date.rs  mod.rs  valid.rs
src/domain/: reservation.rs
src/dto/: create_reservation_dto.rs  mod.rs  reservation_chk_dto.rs  reservation_request_dto.rs  reservation_response_dto.rs  update_reservation_dto.rs  update_status_dto.rs
src/error/: server_error.rs
src/grpc/: grpc_service.rs  mod.rs  reservation_fcm_service.rs
src/infra/: mod.rs
src/infra/db/: mod.rs  reservation_repository.rs  reservation_repository_impl.rs
src/infra/web/: mod.rs  reservation_controller.rs  routes.rs
src/struct/: eureka_info.rs  mod.rs  user_param.rs
