[package]
name = "reservation-msservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
env_logger = "0.11.5"
config = "0.15.6"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql", "macros", "migrate"] }